# course_certificate_generator

./: .env_sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
entity/: student.py
template/: email_template.txt
utils/: email.py  env.py  loader.py  sender.py  settings.py
