[tool.poetry]
name = "course_certificate_generator"
version = "0.1.0"
description = ""
authors = ["Dimk00z"]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "10"
python-dotenv = "0.17.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
